--- a/Release/Official/UIFiles/EncodeFile.ui
+++ b/Release/Official/UIFiles/EncodeFile.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="selectPayload">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -37,7 +37,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="carrierLabel">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Image not found&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
@@ -56,7 +56,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="payloadLabel">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Image not found&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
@@ -64,7 +64,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="previousButton">
    <property name="geometry">
     <rect>
      <x>430</x>
