Tested Encode Text, Decode Text, Encode File and Decode File

--- a/Release/Official/UIFiles/DecodeText.ui
+++ b/Release/Official/UIFiles/DecodeText.ui
@@ -42,7 +42,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Restart</string>
+    <string>Main Menu</string>
    </property>
   </widget>
   <widget class="QPushButton" name="previousButton">
