--- a/Gabrielys/hexForm.ui
+++ b/Gabrielys/hexForm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>580</width>
-    <height>497</height>
+    <width>750</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string> Download Hexdump</string>
+    <string> Generate Hexdump</string>
    </property>
   </widget>
   <widget class="QPushButton" name="uploadButton">
@@ -39,73 +39,54 @@
     <string>Upload FIle</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QScrollArea" name="scrollArea">
    <property name="geometry">
     <rect>
-     <x>286</x>
-     <y>26</y>
-     <width>261</width>
-     <height>361</height>
+     <x>280</x>
+     <y>20</y>
+     <width>411</width>
+     <height>411</height>
     </rect>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
+   <property name="widgetResizable">
+    <bool>true</bool>
    </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QStackedWidget" name="stackedWidget">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>100</y>
-     <width>341</width>
-     <height>231</height>
-    </rect>
-   </property>
-   <widget class="QWidget" name="page">
-    <widget class="QDialogButtonBox" name="buttonBox">
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>409</width>
+      <height>409</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>90</x>
-       <y>160</y>
-       <width>166</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::No|QDialogButtonBox::Yes</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>60</y>
-       <width>241</width>
-       <height>17</height>
+       <x>26</x>
+       <y>16</y>
+       <width>361</width>
+       <height>371</height>
       </rect>
      </property>
      <property name="text">
-      <string>Do you want to open the hexdump </string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>90</y>
-       <width>111</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>in a text editor?</string>
+      <string/>
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="page_2"/>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>470</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Close</string>
+   </property>
   </widget>
  </widget>
  <resources/>
