Finished implementing Encrypt/Decrypt page

--- a/Release/Official/UIFiles/encrypt_decrypt_pane.ui
+++ b/Release/Official/UIFiles/encrypt_decrypt_pane.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>409</height>
+    <width>247</width>
+    <height>324</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Encrypt\Decrypt</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QComboBox" name="algoCombobox"/>
    </item>
-   <item row="1" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_6">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
       <widget class="QRadioButton" name="encryptRadioButton">
        <property name="text">
@@ -38,26 +38,43 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="selectFileButton">
+      <widget class="QPushButton" name="inputPushButton">
        <property name="text">
-        <string>Select File</string>
+        <string>Select Input</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="filePath"/>
+      <widget class="QLineEdit" name="inputFilePath"/>
      </item>
     </layout>
    </item>
-   <item row="3" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="outputPushButton">
+       <property name="text">
+        <string>Save Output</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="outputFilePath"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <widget class="QLabel" name="passwordLabel">
        <property name="text">
-        <string>Password</string>
+        <string>&amp;Password</string>
+       </property>
+       <property name="buddy">
+        <cstring>passwordEdit</cstring>
        </property>
       </widget>
      </item>
@@ -66,8 +83,8 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QPushButton" name="publicKeyButton">
        <property name="enabled">
@@ -87,8 +104,8 @@
      </item>
     </layout>
    </item>
-   <item row="5" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
       <widget class="QPushButton" name="privateKeyButton">
        <property name="enabled">
@@ -108,8 +125,8 @@
      </item>
     </layout>
    </item>
-   <item row="6" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_6">
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
