--- a/Release/Official/UIFiles/generate_rsa_keys.ui
+++ b/Release/Official/UIFiles/generate_rsa_keys.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>291</width>
+    <height>174</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Generate RSA Keys</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
